# teradataextras

./: .gitignore  README.md  pyproject.toml
teradataextras/: __init__.py  connection.py  teradata.py
